# CLI-Cypher

./: CMakeLists.txt  README.md
src/: crypto.h  cypher.c
test/: CMakeLists.txt  cypherTest.cpp
